Video Editor: seq_prefetch_cache_is_full while undoing #76320

Closed
opened 2020-05-02 10:11:49 +02:00 by Ankit Meel · 4 comments
Member

System Information
Operating system: Darwin 18.7
Graphics card: Intel HD 6000

Blender Version
Broken: 03b911dd87
Worked: 2.82a works. didn't test in between.

Short description of error
Crash with this trace with the given steps. (came across this while trying out #76033 (Video Sequence Editor crash with prefetch and meta strips))

- 0	 seq_prefetch_is_cache_full at source/blender/blenkernel/intern/seqprefetch.c:164
- 1	 seq_prefetch_frames at source/blender/blenkernel/intern/seqprefetch.c:358
#2	 tslot_thread_start at source/blender/blenlib/intern/threads.c:258

Exact steps for others to reproduce the error

  • file > new > video editing
  • add > color
  • In the preview editor, N panel > view tab > prefetch frames.
  • select the strip below, {key cmd G}
  • Undo 2-3 steps and it crashes.
**System Information** Operating system: Darwin 18.7 Graphics card: Intel HD 6000 **Blender Version** Broken: 03b911dd87 Worked: 2.82a works. didn't test in between. **Short description of error** Crash with this trace with the given steps. (came across this while trying out #76033 (Video Sequence Editor crash with prefetch and meta strips)) ``` - 0 seq_prefetch_is_cache_full at source/blender/blenkernel/intern/seqprefetch.c:164 - 1 seq_prefetch_frames at source/blender/blenkernel/intern/seqprefetch.c:358 #2 tslot_thread_start at source/blender/blenlib/intern/threads.c:258 ``` **Exact steps for others to reproduce the error** - file > new > video editing - add > color - In the preview editor, N panel > view tab > prefetch frames. - select the strip below, {key cmd G} - Undo 2-3 steps and it crashes.
Author
Member

Added subscriber: @ankitm

Added subscriber: @ankitm

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Richard Antalik was assigned by Dalai Felinto 2020-05-11 14:30:43 +02:00

This issue was referenced by 50ef801a79

This issue was referenced by 50ef801a79b5c280ecd02f89e9a9b4533e4102c4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76320
No description provided.