Fix T76320: Thread race condition on undo with prefetching enabled

Stop prefetch jobs before undoing.

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D7633